# shared-sage-notebooks

./: 2018-03-28-AlanSokal-TimingPolynomials.ipynb  2018-04-10-Arpad-hashable-mutable-dict-monoids.ipynb  2018-04-17-path-algebra-quotients.ipynb  2018-04-17-path-semigroup-GAP.ipynb  2018-04-17-path-semigroup.ipynb  2018-07-26-ElementsParentsCategories-ICERM.ipynb  2018-11-14-PyParis-Education-SageMath.ipynb  2019-07-10-SageDays103-FPSAC19-Ljubljana-ObjectOrientedProgrammingInSage.ipynb  2020-02-19-AlcoveArt.ipynb  2021-02-15-SageOscarDays.md  2021-02-15-SageOscarDays.xoj  2021-02-15-SageOscarDays2.xoj  2021-10-07-WoSSS.md  2025-10-06-KLAIM2025-CouplingMathSoftware.md  Dockerfile  Dockerfile.disabled  README.md  environment.yml  environmnent.yml  jupytext.toml  pyproject.toml
install_files/etc/jupyter/jupyter_notebook_config.d/: jupytext_config.json
install_files/etc/jupyter/labconfig/: default_setting_overrides.json
media/: mistargraph.tex
