[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-sage-notebooks"
version = "0.1.0"
description = "Nicolas's shared sage notebooks"
authors = [
    {name = "Nicolas M. Thiéry", email = "nicolas.thiery@universite-paris-saclay.fr"},
]
requires-python = "==3.13.*"
readme = "README.md"
license = "CC-BY-SA-4.0"
dependencies = [
    "jupyterlab",
    "jupyterlab-myst",
    "jupyterlab-slideshow",
    "jupytext",
    "ipython",
]


[tool.hatch.build.targets.wheel.shared-data]
"install_files/" = "/"
